[gd_scene load_steps=4 format=3 uid="uid://dvg0tflkqf0ud"]

[ext_resource type="Script" path="res://userinterfaces/settings_menu/volume/volume.gd" id="1_0qyae"]
[ext_resource type="AudioStream" uid="uid://bg1iqwicykrse" path="res://assets/settings_menu/beep.wav" id="2_mofo2"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hbr4b"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("2_mofo2")
stream_0/weight = 1.0

[node name="Volume" type="VBoxContainer"]
script = ExtResource("1_0qyae")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
min_value = -30.0
max_value = 10.0
step = 0.0

[node name="DragAudio" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_hbr4b")
volume_db = -10.0
pitch_scale = 0.8

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
